*SVN*

* Fixed validates_{confirmation,acceptance}_of to only happen when the virtual attributes are not nil #348 [dpiddy@gmail.com]

* Added a require_association hook on const_missing that makes it possible to use any model class without requiring it first. This makes STI look like:

    before:
      require_association 'person'
      class Employee < Person
      end
    
    after:
      class Employee < Person
      end

  This also reduces the usefulness of Controller.model in Action Pack to currently only being for documentation purposes.      

* Added that Base.update_all and Base.delete_all return an integer of the number of affected rows #341

* Changed the interface on AbstractAdapter to require that adapters return the number of affected rows on delete and update operations.

* Added that query benchmarking will only happen if its going to be logged anyway #344

* Added higher_item and lower_item as public methods for acts_as_list #342 [Tobias Luetke]

* Added respondence to *_before_type_cast for all attributes to return their string-state before they were type casted by the column type.
  This is helpful for getting "100,000" back on a integer-based validation where the value would normally be "100".

* Fixed the automated timestamping feature when running under Rails' development environment that resets the inheritable attributes on each request.

* Added Base#update_attributes that'll accept a hash of attributes and save the record (returning true if it passed validation, false otherwise). 

    Before:
      person.attributes = @params["person"]
      person.save
    
    Now:
      person.update_attributes(@params["person"])

* Added Base.destroy and Base.delete to remove records without holding a reference to them first.


*1.2.0*

* Added Base.validates_inclusion_of that validates whether the value of the specified attribute is available in a particular enumerable
  object. [what-a-day]

    class Person < ActiveRecord::Base